--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -2,8 +2,9 @@
     padding: 0;
     margin: 0;
 }
-html, body {
+html, body, #root {
     height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
 }
